changed to Stream.toList from Stream.collector